Update mostly everything

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -424,7 +424,7 @@ disk_subtitle="mount"
 # xmms2d
 # xnoise
 # yarock
-music_player="auto"
+#music_player="auto"
 
 # Format to display song information.
 #
@@ -472,7 +472,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(3 7 7 3 7 7)
+colors=(5 7 7 5 7 7)
 
 
 # Text Options
@@ -627,7 +627,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="sixel"
+#image_backend="sixel"
 
 # Image Source
 #
@@ -641,7 +641,7 @@ image_backend="sixel"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="~/.backgrounds/test.png"
+#image_source="~/.backgrounds/test.png"
 
 
 # Ascii Options
@@ -671,7 +671,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(3 3 3 3 3 3)
+ascii_colors=(5 5 5 5 5 5)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
