Openbsd now uses custom git status in p10k

--- a/openbsd/kitty/kitty.conf
+++ b/openbsd/kitty/kitty.conf
@@ -19,8 +19,8 @@ color3                #f9a31b
 color11               #ffd541
 color4                #134eb2
 color12               #53a4f3
-color5                #843a84
-color13               #a94dbb
+color5                #9f3a9f
+color13               #af4fbf
 color6                #0e707c
 color14               #26bad1
 color7                #eeeeee
