Removed pop up opacity

--- a/openbsd/picom/picom.conf
+++ b/openbsd/picom/picom.conf
@@ -11,10 +11,10 @@ shadow = true;
 wintypes:
 {
   normal = { fade = true; shadow = true; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { shadow = false; opacity = 0.8; }
+  popup_menu = { shadow = false; }
   dropdown_menu = { shadow = false; }
 };
 
