--- a/freebsd/picom/picom.conf
+++ b/freebsd/picom/picom.conf
@@ -1,4 +1,20 @@
 inactive-dim = 0.15;
+inactive-dim-fixed = true;
+
 vsync = true;
+
 fading = true;
+no-fading-openclose = false;
+
 shadow = true;
+
+wintypes:
+{
+  normal = { fade = true; shadow = true; }
+  tooltip = { fade = true; shadow = true; focus = true; full-shadow = false; };
+  dock = { shadow = false; }
+  dnd = { shadow = false; }
+  popup_menu = { shadow = false; }
+  dropdown_menu = { shadow = false; }
+};
+
