--- a/openbsd/.config/polybar/config.ini
+++ b/openbsd/.config/polybar/config.ini
@@ -55,9 +55,9 @@ tray-padding = 5
 inherit = bar/base
 monitor = HDMI-2
 
-[bar/HDMI3]
+[bar/DP1]
 inherit = bar/base
-monitor = HDMI-3
+monitor = DP-1
 
 [module/xwindow]
 pin-output = false
@@ -154,8 +154,6 @@ label = %output%%
 
 [settings]
 screenchange-reload = true
-throttle-output = 5
-throttle-output-for = 10
 compositing-underline = over
 
 [global/wm]
